se agrega el ep para la trasaccion se dejan las transacciones como modelo polimofico para que sea representado por cualquier modelo Se remove el trsaction id Se agrega el header al contact list en el rake se agrega el header como valor se agrega el campo header se quita la validacion del saldo
